--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 <h1>Gitproject</h1>
 <p>Абзац</p>
 
 
-<script src="script.js"></script>
+<script src="src/script.js"></script>
 </body>
 </html>
