added div and span

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <h1>Gitproject</h1>
 <p>Абзац</p>
 <div>Новый текст</div>
-<span>Commit</span>
-
+<div>Новый блок <span>спан</span></div>
 
 <script src="src/script.js"></script>
 </body>
