replaced div with span

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Gitproject</h1>
 <p>Абзац</p>
-<div>Новый текст</div>
+<span>Новый текст</span>
 <div>Новый блок <span>спан</span></div>
 <br>
 <hr>
