--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-<h1>Gitproject</h1>
+<h1>Gitproject 1</h1>
 <p>Абзац</p>
 <span>Новый текст</span>
 <div>Замененный текст</div>
