--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Gitproject 1</h1>
 <p>Абзац 1</p>
-<span>Новый текст</span>
+<span>Новый текст 1</span>
 <div>Замененный текст</div>
 <div>Новый блок <span>спан</span></div>
 <br>
