--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-<h1>Gitproject 21</h1>
+<h1>1Gitproject 21</h1>
 <p>Абзац 2</p>
 <span>Новый текст 2</span>
 <div>Замененный текст</div>
