--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div>Новый блок <span>спан</span></div>
 <br>
 <hr> 123
+<p>Новый абзац</p>
 <script src="src/script.js"></script>
 </body>
 </html>
