--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>1Gitproject 21</h1>
 <p>Абзац 2</p>
 <span>Новый текст 2</span>
-<div>Замененный текст</div>
+<div>Замененный текст</div>1
 <div>Новый блок <span>спан</span></div>
 <br>
 <hr> 123
